fix: 태그 항목 줄바꿈 방지 - white-space: nowrap

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -126,13 +126,15 @@
   
   .category-tag-list {
     display: inline-flex;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
     margin: 0;
-    
+
     li {
       display: inline;
       margin-right: 0.5rem;
+      white-space: nowrap;
       
       &:not(:last-child)::after {
         content: ",";
